🐞 fix:  need implement some animation and content

--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,15 @@
     smoothScrollBehavior: smooth;
 }
 
+.stop-scrolling {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-: hidden;
+}
+
 .text-stroke {
     -webkit-text-stroke: 1px #d6d3d1;
     text-stroke: 1px #d6d3d1;
