--- a/src/presentation/components/preloader/preloader.css
+++ b/src/presentation/components/preloader/preloader.css
@@ -1,3 +1,12 @@
+.stop-scrolling {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-: hidden;
+}
+
 #preloaderMainText {
     opacity: 0;
     animation: fadeIn .15s ease-in-out 2s forwards 2, moveLeft 1s ease-in-out 4.5s forwards, displayNone .25s ease-in-out 10.5s forwards;
