--- a/src/presentation/components/content/content.css
+++ b/src/presentation/components/content/content.css
@@ -39,3 +39,17 @@
         opacity: 1;
     }
 }
+
+@media only screen and (min-width: 768px) {
+    @keyframes hiTextSize {
+        100% {
+            font-size: 8rem;
+        }
+    }
+
+    @keyframes descriptionTextSize {
+        100% {
+            font-size: 2rem;
+        }
+    }
+}
