--- a/src/presentation/components/preloader/preloader.css
+++ b/src/presentation/components/preloader/preloader.css
@@ -164,3 +164,56 @@
         transform: translateY(-100vh);
     }
 }
+
+@media only screen and (min-width: 768px) {
+    #slideLeft {
+        animation: slideUp .5s ease-in-out 5.5s forwards, slideMoveLeft 1.75s ease-in-out 7s forwards, displayNone .25s ease-in-out 10.5s forwards;
+    }
+
+    #slideRight {
+        animation: slideUp .5s ease-in-out 5.5s forwards, slideMoveRight 1.75s ease-in-out 7s forwards, displayNone .25s ease-in-out 10.5s forwards;
+    }
+
+    @keyframes slideUp {
+        0% {
+            height: 0;
+        }
+
+        100% {
+            height: 14rem;
+        }
+    }
+
+    @keyframes displayNone {
+        0% {
+        display: flex;
+        }
+
+        100% {
+            display: none;
+            transform: translateY(-100vh);
+        }
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    @keyframes moveLeft {
+        0% {
+        margin-left: 0;
+        }
+
+        100% {
+            margin-left: -200rem;
+        }
+    }
+
+    @keyframes moveRight {
+        0% {
+            margin-left: 0;
+        }
+
+        100% {
+            margin-left: 200rem;
+        }
+    }
+}
